tests/negative/neg_pr1113a_sum_print.safe
package neg_pr1113a_sum_print

   type shape is circle (radius : integer) or idle

   print (idle)
